<resources>
    <string name="app_name">DollarUpMoneySkills</string>
    <string name="title_activity_level_prompt">LevelPrompt</string>
    <string name="DefaultQ">Question debugging text.</string>
    <string name="debugAudioBtnTxt">playSound</string>
    <string name="finishTxt">Finish Paying</string>
    <string name="moneyTotalDesc">Shows money</string>
    <string name="dollarBtnDesc">AddCash</string>
    <string name="appTitle">Dollar Up</string>
    <string name="Button1">Level 1</string>
    <string name="settingsTitle">Settings</string>
    <string name="soundTitle">Sound</string>
    <string name="ttSpeech">Text to Speech</string>
    <string name="itemDefault">\"null\"</string>
    <string name="dollarUp">"Dollar Up"</string>
    <string name="chooseItemTxt">Choose what to buy:</string>
    <string name="FinishTxt">Finish Paying</string>
    <string name="lvl1Txt">Level 1</string>
    <string name="lvl2Txt">Level 2</string>
    <string name="lvl3Txt">Level 3</string>
    <string name="GenericNull">\"null\"</string>
    <string name="DefaultQText">Use your bills to buy the item</string>
    <string name="txtViewDefault">TextView</string>
    <string name="buy_item">Buy Item</string>
    <string name="credit">This app icon was created using LogoMakr</string>
</resources>
